changed fixed height to remove white space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,6 @@ nav {
 /* image and cover text */
 
 #team-outer {
-    height: 600px;
     width: 100%;
     overflow: hidden;
 
